--- a/content/i18n.md
+++ b/content/i18n.md
@@ -1,11 +1,6 @@
 ---
 title: "Internationalization"
-metaTitle: "Syntax Highlightingdddd is the meta title tag for this page"
-metaDescription: "This is the meta description for this page"
+metaTitle: "Internationalization"
+metaDescription: "Internationalization"
 ---
 
-The following is a code block with JavaScript language syntax highlighting.
-
-```javascript
-import React from 'react';
-```
